Bug 36440 - [4.4 Regression] FAIL: g++.dg/cdce3.C on powerpc-apple-darwin8.5.0
Summary: [4.4 Regression] FAIL: g++.dg/cdce3.C on powerpc-apple-darwin8.5.0
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: testsuite (show other bugs)
Version: 4.4.0
: P2 normal
Target Milestone: 4.4.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-06-05 13:57 UTC by Dominique d'Humieres
Modified: 2008-09-15 09:42 UTC (History)
6 users (show)

See Also:
Host: powerpc-apple-darwin8.5.0
Target: powerpc-apple-darwin8.5.0
Build: powerpc-apple-darwin8.5.0
Known to work:
Known to fail:
Last reconfirmed:


Attachments
patch (1.14 KB, patch)
2008-06-11 01:27 UTC, Kazumoto Kojima
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Dominique d'Humieres 2008-06-05 13:57:07 UTC
On powerpc-apple-darwin8.5.0 (see http://gcc.gnu.org/ml/gcc-testresults/2008-06/msg00340.html) one has:

FAIL: g++.dg/cdce3.C (test for excess errors)
WARNING: g++.dg/cdce3.C compilation failed to produce executable
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:68: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:69: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:70: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:71: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:72: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:73: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:74: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:75: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:76: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:77: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:78: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:79: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:80: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:81: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:82: note: function call is shrink-wrapped into error conditions.": dump file does not exist
FAIL: g++.dg/cdce3.C scan-tree-dump cdce "cdce3.C:83: note: function call is shrink-wrapped into error conditions.": dump file does not exist

although the first line is

/* { dg-do  run { target { ! "*-*-darwin" } } } */

Is the syntax correct?
Comment 1 Dominique d'Humieres 2008-06-06 12:59:22 UTC
The failures disappear with the following patch:

--- /opt/gcc/_gcc_clean/gcc/testsuite/g++.dg/cdce3.C	2008-06-05 08:50:23.000000000 +0200
+++ /opt/gcc/gcc-4.4-work/gcc/testsuite/g++.dg/cdce3.C	2008-06-06 13:50:12.000000000 +0200
@@ -1,4 +1,4 @@
-/* { dg-do  run { target { ! "*-*-darwin" } } } */
+/* { dg-do  run { target { ! "*-*-darwin*" } } } */
 /* { dg-options "-O2 -fmath-errno -fdump-tree-cdce-details  -lm" } */
 /* { dg-final { scan-tree-dump  "cdce3.C:68: note: function call is shrink-wrapped into error conditions\." "cdce" } }*/
 /* { dg-final { scan-tree-dump  "cdce3.C:69: note: function call is shrink-wrapped into error conditions\." "cdce" } }*/

(at least on i686-apple-darwin9).

Comment 2 davidxl 2008-06-06 18:00:53 UTC
(In reply to comment #1)
> The failures disappear with the following patch:
> 
> --- /opt/gcc/_gcc_clean/gcc/testsuite/g++.dg/cdce3.C    2008-06-05
> 08:50:23.000000000 +0200
> +++ /opt/gcc/gcc-4.4-work/gcc/testsuite/g++.dg/cdce3.C  2008-06-06
> 13:50:12.000000000 +0200
> @@ -1,4 +1,4 @@
> -/* { dg-do  run { target { ! "*-*-darwin" } } } */
> +/* { dg-do  run { target { ! "*-*-darwin*" } } } */
>  /* { dg-options "-O2 -fmath-errno -fdump-tree-cdce-details  -lm" } */
>  /* { dg-final { scan-tree-dump  "cdce3.C:68: note: function call is
> shrink-wrapped into error conditions\." "cdce" } }*/
>  /* { dg-final { scan-tree-dump  "cdce3.C:69: note: function call is
> shrink-wrapped into error conditions\." "cdce" } }*/
> 
> (at least on i686-apple-darwin9).
> 

I wonder why gcc.dg/cdce1.c and gcc.dg/cdce2.c do not fail in the same way?

David
Comment 3 Dominique d'Humieres 2008-06-06 18:17:28 UTC
> I wonder why gcc.dg/cdce1.c and gcc.dg/cdce2.c do not fail in the same way?

Because the tests pass (as far as I can tell from the tests oni686-apple-darwin9).

Comment 4 Kazumoto Kojima 2008-06-11 01:27:38 UTC
Created attachment 15746 [details]
patch

From the reports on gcc-testresults, cdce3.C fails on some
other targets:

arm-none-linux-gnueabi
http://gcc.gnu.org/ml/gcc-testresults/2008-06/msg00404.html
powerpc64-unknown-linux-gnu
http://gcc.gnu.org/ml/gcc-testresults/2008-06/msg00430.html
sh4-unknown-linux-gnu
http://gcc.gnu.org/ml/gcc-testresults/2008-06/msg00494.html
powerpc-ibm-aix5.3.0.0
http://gcc.gnu.org/ml/gcc-testresults/2008-06/msg00508.html
i386-unknown-freebsd6.2
http://gcc.gnu.org/ml/gcc-testresults/2008-06/msg00522.html
mipsel-unknown-linux-gnu
http://gcc.gnu.org/ml/gcc-testresults/2008-06/msg00555.html

though now cdce3.C test is skipped on darwin.
It fails also for some *-elf embedded targets.  For these
*-linux* and *-elf targets, it seems that the lack of 'l'
suffixed math functions causes errors.
How about the attached patch?  It tests long double math
functions only for the targets having true long double and
skips tests for pow10*/exp10* functions which are gnu extensions
on *-*-darwin*.
It's tested for i686-pc-linux-gnu, powerpc-apple-darwin9.0.0,
sh-unknown-elf and sh4-unknown-linux-gnu.  I'm not sure
how this test fails on AIX and FreeBSD, though.
Comment 5 John David Anglin 2008-06-15 14:53:27 UTC
Also fails on hppa*-*-*.
Comment 6 John David Anglin 2008-06-15 19:57:58 UTC
gcc.dg/cdce1.c and gcc.dg/cdce2.c also fail on hppa*-*-*.
Comment 7 John David Anglin 2008-07-13 22:28:44 UTC
Subject: Bug 36440

Author: danglin
Date: Sun Jul 13 22:27:58 2008
New Revision: 137757

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=137757
Log:
	PR testsuite/36440
	* tree-call-cdce.c (check_target_format): Accept MIPS single, double
	and quad formats.


Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/tree-call-cdce.c

Comment 8 Jakub Jelinek 2008-09-15 09:42:17 UTC
Everything seems to be fixed as far as I can see.