re PR testsuite/36440 (FAIL: g++.dg/cdce3.C on powerpc-apple-darwin8.5.0)

PR testsuite/36440
	* tree-call-cdce.c (check_target_format): Accept MIPS single, double
	and quad formats.

From-SVN: r137757